basic web app frame

--- a/templates/input.html
+++ b/templates/input.html
@@ -1,23 +1,23 @@
 <!doctype html>
-<title> onboarding_project </title>
+<title> consumer_complaints </title>
 
 <div>
-    <h3> Enter stock label and month to get closing price over the month </h3>
+    <h3> Enter a financial service company and a financial product </h3>
 </div>
     
 <div>
-    <form id='stock_entry' method='post'>
-    Stock label:
+    <form id='company_name' method='post'>
+    Company name:
     <br>
-    <input type='text' name='stock_label_entry' placeholder='GOOG'>
+    <input type='text' name='company_name' placeholder='WELLS FARGO & COMPANY'>
 </div>
 
 <div>
     </br>
-    <form id='month_entry' method='post'>
-    Month (MM-YYYY format):
+    <form id= product method='post'>
+    Product:
     <br>
-    <input type='text' name='month_entry' placeholder='10-1929'>
+    <input type='text' name='product' placeholder='Mortgage'>
 </div>
 
 <div>
