--- a/templates/output.html
+++ b/templates/output.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="http://cdn.pydata.org/bokeh/release/bokeh-0.12.4.min.css" type="text/css" />
         <script type="text/javascript" src="http://cdn.pydata.org/bokeh/release/bokeh-0.12.4.min.js"></script>
 
-        {{ bokeh_script|safe }}
+        {{ bokeh_script|safe }}</script>
 
     </head>
     <body>
