trying the file html method

--- a/templates/output.html
+++ b/templates/output.html
@@ -1,23 +1,4 @@
-<!DOCTYPE html>
-
-<html lang = "en">
-    <head>
-        <meta charset="utf-8">
- 
-
-        <link rel="stylesheet" href="http://cdn.pydata.org/bokeh/release/bokeh-0.12.4.min.css" type="text/css" />
-        <script type="text/javascript" src="http://cdn.pydata.org/bokeh/release/bokeh-0.12.4.min.js"></script>
-
-        {{ bokeh_script|safe }}
-
-    </head>
-    <body>
-        {{ bokeh_div|safe }}
-    </body>
-</html>
-    
-    
-    
+{{ output_html|safe }}
     
     
 <html>
