both plots, but messy html

--- a/templates/output.html
+++ b/templates/output.html
@@ -4,10 +4,11 @@
 <body>
 The complaint-frequency score is: {{ score }}
 <br>
+<br>
+<br>
+<br>
 <br/>
-{{ output_html|safe }}
-
-{{ data|safe }}
+{{ output_html|safe }} {{ data|safe }}
 </body>
     
     
