adding home, about pages

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
     <meta name="author" content="@gotoariel">
     <!-- <link rel="icon" href="favicon.ico"> -->
 
-    <title>Wilkommen, bienvenue, and welcome to Heroku!</title>
+    <title>Consumer Complaint Issues Analyzer Home</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -19,10 +19,7 @@
           <h2>Choose a link</h2>
           <ul>
             <li><a href="/about">About</a></li>
-            <li><a target="_blank" href="https://www.heroku.com/">about</a></li>
-            <li><a target="_blank" href="http://flask.pocoo.org/">Flask</a></li>
-            <li><a target="_blank" href="http://jinja.pocoo.org/docs/2.9/">Jinja2</a></li>
-            <li><a target="_blank" href="http://getbootstrap.com/">Bootstrap</a></li>
+            <li><a href="/entercompanyproduct">Explore Complaint Issues</a></li>
           </ul>
         </div>
       </div>
