--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+ <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -7,7 +7,15 @@
     <meta name="author" content="@gotoariel">
     <!-- <link rel="icon" href="favicon.ico"> -->
 
-    <title>Wilkommen, bienvenue, and welcome to Heroku!</title>
+    <title>Consumer Complaint Issues Analyzer Home</title>
+      
+  <head>
+      Salient Financial-Product Complaint Issues For Consumers Across Companies
+  </head>
+  <body>
+  To help financial advisors and their clients; compare; 
+
+  </body>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -16,13 +24,10 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-left">
-          <h2>Hello, World!</h2>
+          <h2>Choose a link</h2>
           <ul>
-            <li><a href="/about">About</a></li>
-            <li><a target="_blank" href="https://www.heroku.com/">Heroku</a></li>
-            <li><a target="_blank" href="http://flask.pocoo.org/">Flask</a></li>
-            <li><a target="_blank" href="http://jinja.pocoo.org/docs/2.9/">Jinja2</a></li>
-            <li><a target="_blank" href="http://getbootstrap.com/">Bootstrap</a></li>
+            <li><a href="/home">Home/a></li>
+            <li><a href="/entercompanyproduct">Explore Complaint Issues</a></li>
           </ul>
         </div>
       </div>
@@ -32,5 +37,5 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  </body>
+  </body>   
 </html>
