--- a/templates/about.html
+++ b/templates/about.html
@@ -26,7 +26,7 @@
         <div class="col-lg-12 text-left">
           <h2>Choose a link</h2>
           <ul>
-            <li><a href="/">Home></li>
+            <li><a href="/">Home</li>
             <li><a href="/entercompanyproduct">Explore Complaint Issues</a></li>
           </ul>
         </div>
