adding home, about pages

--- a/templates/about.html
+++ b/templates/about.html
@@ -7,11 +7,13 @@
     <meta name="author" content="@gotoariel">
     <!-- <link rel="icon" href="favicon.ico"> -->
 
-    <title>Consumer Complaint Issues Analyzer Home</title>
+    <title>About page</title>
       
-  <head>
+  <h>
       Salient Financial-Product Complaint Issues For Consumers Across Companies
-  </head>
+  </h>
+  <br>
+  <br>
   <body>
   To help financial advisors and their clients; compare; 
 
@@ -24,9 +26,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-left">
-          <h2>Choose a link</h2>
+          <h3>Choose a link</h3>
           <ul>
-            <li><a href="/">Home</li>
+              <li><a href="/"> Home </a></li>
             <li><a href="/entercompanyproduct">Explore Complaint Issues</a></li>
           </ul>
         </div>
