adding home, about pages

--- a/templates/about.html
+++ b/templates/about.html
@@ -9,13 +9,14 @@
 
     <title>About page</title>
       
-  <h>
+  <h1>
       Salient Financial-Product Complaint Issues For Consumers Across Companies
-  </h>
+  </h1>
   <br>
   <br>
-  <body>
-  To help financial advisors and their clients; compare; 
+  
+ <p>This application aims to aid financial advisory firms, and their clients, by enabling consumers to explore notable complaint 
+     issues, and </p>
 
   </body>
 
@@ -26,7 +27,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-left">
-          <h3>Choose a link</h3>
+          <h4>Links</h4>
           <ul>
               <li><a href="/"> Home </a></li>
             <li><a href="/entercompanyproduct">Explore Complaint Issues</a></li>
