adding home, about pages

--- a/templates/about.html
+++ b/templates/about.html
@@ -9,14 +9,19 @@
 
     <title>About page</title>
       
-  <h1>
+  <h2>
       Salient Financial-Product Complaint Issues For Consumers Across Companies
-  </h1>
+  </h2>
   <br>
   <br>
   
- <p>This application aims to aid financial advisory firms, and their clients, by enabling consumers to explore notable complaint 
-     issues, and </p>
+  <body>
+ <p>
+ This application aims to aid financial advisory firms, and their clients, by enabling consumers to explore notable complaint 
+ issues, and to compare and contast their prevalence across companies that provide a given financial product or service of
+ interest. Consumers interested in a particular financial product can compare complaint issues across potential companies of interest, 
+ and thereby better fine-tune their dicussions and planning with financial advisors. The primary database utilzed for this app is the U.S.  
+ Federal government's Consumer Financial Protection Bureau Complaint Database. </p>
 
   </body>
 
