--- a/templates/about.html
+++ b/templates/about.html
@@ -2,12 +2,8 @@
  <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Skeleton application demoing Heroku and Flask integration.">
-    <meta name="author" content="@gotoariel">
-    <!-- <link rel="icon" href="favicon.ico"> -->
 
-    <title>About page</title>
+    <title>About Page</title>
       
   <h2>
       Salient Financial-Product Complaint Issues For Consumers Across Companies
@@ -26,8 +22,8 @@
  <p>
  The CFPB Database logs problems or issues customers report experiencing with finanical companies, such as unexpected fees or poor 
  fraud protection, in relation to various financial products. There are some redundancies in the set of product categories in the database  
- (e.g., both 'Bank account or service', and 'Checking or savings account' listed as separate categories; therefore, the for app's analytics 
- combines categories and reducesthe original 20 to the following 9 product categories:
+ (e.g., both 'Bank account or service', and 'Checking or savings account' listed as separate categories; therefore, the app 
+ combines categories and reduces the original 20 to the following 9 product categories:
  </p>
 
 <ul>
@@ -41,20 +37,38 @@
   <li>Student_Loan</li>
   <li>Other</li>
 </ul>  
+<p>
+In addition, the CFPB Database "issues" variable is comprised of 166 distinct category labels. In order to return useful coarser-grained feedback to the user regarding which kinds of issues are more likely on a given product of interest for different companies, the app groups together redundant as well as related categories (based on some prior judgment calls for the latter) to reduce this original set to the following 14 issue categories:
+</p>
+<ul>
+  <li>Struggling with payment</li>
+  <li>Unexpected fees or interest</li>
+  <li>Company not crediting payment, or charging a payment fee</li>
+  <li>Account opening, closing, and management</li>
+  <li>Problem using services</li>
+  <li>Approved loan not delivered</li>
+  <li>Disputed transaction, fraud, or poor fraud protection</li>
+  <li>Incorrect information on report or bill</li>
+  <li>Advertising annoyance or privacy violation</li>
+  <li>Item repossessed</li>
+  <li>Defective item</li>
+  <li>Threatening, unprofessional, or illegal debt collection practices</li>
+  <li>Poor customer service</li>
+  <li>Other</li>
+</ul>  
+
+<p>
+The user can view frequency plots for the different complaint issues reported by consumers for a given financial product, which are generated at the time of user input, and which can inform the user's considerations of different companies for the product, and his or her financial advisement and discussions. In addition, the CFPB database includes, for approximately 25% of complaints, a complaint narrative (agreed by the consumer to be allowed to be stored in the database). Also based on the user's product and company inputs, the app generates wordcloud plots based on these complaint narratives. 
+</p>
+<p>
+The user also receives feedback regarding how likely complaints on a financial product are to arise for different companies. A complaint-frequency score is computed for a given input product and company, based on the number of complaints in the database for the company-product combination, and a normalization factor intended as a proxy for company size, and therefore number of customers. That is, the normalization-factor is the company's mean monthly dollar-volume (in tens-of-millions of dollars), added to the same frequency as is in the numerator (to obtain an index that ranges from 0 to 1).   
+<p>
+For a sufficient base of analytics, the app includes as potential input companies only those with at least 100 complaints since Aug., 2015. Only complaints since this date are considered (both to limit processing time for the realtime generated plots, and to avoid special circumstances related the 2008 crash recovery that may no longer apply). In addition, for the dollar-volume computation, companies must be pubicly traded, as this computation depends on the Alphaadvantage stock ticker database. Companies satisfying these conditions, and their stock ticker symbols as obtained by fuzzy string matching of company names across databases, are stored in the app files ahead of time.
+</p>
+<p>
+As the app functions via live API calls to the CFPB database (and secondarily, to the AlphaAdvantage database to compute dollar-volume), the API's SOSQL functionality is utilized to pre-filter data by the user's product and company input. The generated Issue and Wordcloud plots, in combination with the complaint-frequency index for different companies offering the product aid in the user's informed decisions regarding different company products, and can highlight areas of concern for discussion with the user's financial advisor.
+</p>    
       
-      
-      
-      
-      'Bank_Account': ['Bank account or service', 'Checking or savings account'],
-         'Consumer_Loan' : ['Consumer Loan', 'Payday loan', 'Payday loan, title loan, or personal loan'],
-         'Credit_Card' : ['Credit card', 'Credit card or prepaid card', 'Prepaid card'],
-         'Credit_Reporting' : ['Credit reporting', 'Credit reporting, credit repair services, or other personal consumer reports'],
-         'Debt_Collection' : ['Debt collection'],
-         'Money_Transfer' : ['Money transfers', 'Money transfer, virtual currency, or money service', 'Virtual currency'],
-         'Car_Loan' : ['Vehicle loan or lease'],
-         'Mortgage' : ['Mortgage'],
-         'Student_Loan' : ['Student loan'],
-         'Other' : ['Other financial service']
   </body>
 
     <!-- Bootstrap core CSS -->
