adding home, about pages

--- a/templates/about.html
+++ b/templates/about.html
@@ -6,7 +6,7 @@
     <title>About Page</title>
       
   <h2>
-      Salient Financial-Product Complaint Issues For Consumers Across Companies
+      Financial Product Complaint Issues For Consumers Across Companies
   </h2>
   <br>
   <br>
