--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
     <!-- <link rel="icon" href="favicon.ico"> -->
 
     <title>Consumer Complaint Issues Analyzer Home</title>
-
+    <h1>Consumer Complaint Issues Analyzer Home</h1>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-left">
-          <h2>Choose a link</h2>
+          <h4>Links</h4>
           <ul>
             <li><a href="/about">About</a></li>
             <li><a href="/entercompanyproduct">Explore Complaint Issues</a></li>
