--- a/templates/input.html
+++ b/templates/input.html
@@ -2,15 +2,10 @@
 <title> consumer_complaints </title>
 
 <div>
-    <h3> Enter a financial service company and a financial product </h3>
+    <h3> Enter a financial product and up to 3 financial service companies </h3>
 </div>
     
-<div>
-    <form id='company_name' method='post'>
-    Company name:
-    <br>
-    <input type='text' name='company_name' placeholder='WELLS FARGO & COMPANY'>
-</div>
+
 
 <div>
     </br>
@@ -18,6 +13,27 @@
     Product:
     <br>
     <input type='text' name='product' placeholder='Mortgage'>
+</div>
+
+<div>
+    <form id='company_1' method='post'>
+    Company name:
+    <br>
+    <input type='text' name='company_1' placeholder='BANK OF AMERICA, NATIONAL ASSOCIATION'>
+</div>
+    
+<div>
+    <form id='company_2' method='post'>
+    Company name:
+    <br>
+    <input type='text' name='company_2' placeholder='WELLS FARGO & COMPANY'>
+</div>
+    
+<div>
+    <form id='company_3' method='post'>
+    Company name:
+    <br>
+    <input type='text' name='company_3' placeholder='NATIONSTAR MORTGAGE'>
 </div>
 
 <div>
