--- a/templates/output.html
+++ b/templates/output.html
@@ -2,13 +2,17 @@
 <html>
     
 <body>
-The complaint-frequency score is: {{ score }}
+The complaint-frequency score is: {{ score1 }}
+The complaint-frequency score is: {{ score2 }}
+The complaint-frequency score is: {{ score3 }}
 <br>
 <br>
 <br>
 <br>
 <br/>
-{{ output_html|safe }} {{ data|safe }}
+{{ data1|safe }}
+{{ data2|safe }}
+{{ data3|safe }}
 </body>
     
     
