up to 3 entries

--- a/templates/output.html
+++ b/templates/output.html
@@ -2,17 +2,22 @@
 <html>
     
 <body>
-The complaint-frequency score is: {{ score1 }}
-The complaint-frequency score is: {{ score2 }}
-The complaint-frequency score is: {{ score3 }}
+{{ score1 }}
+    
 <br>
+<body>
+{{ score2 }}
 <br>
+    
+<body>
+{{ score3 }}
+<br>
+    
+
 <br>
 <br>
 <br/>
 {{ data1|safe }}
-{{ data2|safe }}
-{{ data3|safe }}
 </body>
     
     
