--- a/templates/output.html
+++ b/templates/output.html
@@ -1,30 +1,37 @@
  
 <html>
     
-<body>
-{{ score1 }}
-    
+{{ score1 }}   
 <br>
-<body>
 {{ score2 }}
 <br>
-    
-<body>
 {{ score3 }}
 <br>
+  
+    
+
+  
+<head>
+    <meta charset="utf-8">
+    {{ bok_script|safe }}
+  </head>
+  <body>
+    {{ bok_div|safe }}
+  </body>    
+    
     
 
 <br>
 <br>
 <br/>
 {{ data1|safe }}
+<br>
 {{ data2|safe }}
+<br>
 {{ data3|safe }}
-</body>
-    
-    
-</html>
 
+   
+</html>
 
 
     
