up to 3 entries

--- a/templates/output.html
+++ b/templates/output.html
@@ -7,18 +7,15 @@
 <br>
 {{ score3 }}
 <br>
+<br>
   
-    
+<body>
+{{ div|safe }}
+{{ script|safe }}
+</body>   
 
   
-<head>
-    <meta charset="utf-8">
-    {{ bok_script|safe }}
-  </head>
-  <body>
-    {{ bok_div|safe }}
-  </body>    
-    
+
     
 
 <br>
