product input as radio form

--- a/templates/input.html
+++ b/templates/input.html
@@ -2,18 +2,28 @@
 <title> consumer_complaints </title>
 
 <div>
-    <h3> Enter a financial product and up to 3 financial service companies </h3>
+    <h3> Select a financial product and enter up to 3 financial service companies </h3>
 </div>
-    
+ 
+
 
 
 <div>
-    </br>
-    <form id= product method='post'>
-    Product:
-    <br>
-    <input type='text' name='product' placeholder='Mortgage'>
+<form id = 'product' method = 'post'>
+  <input type="radio" name= 'Bank_Account' value= 'Bank_Account' checked> Bank_Account<br>
+  <input type="radio" name= 'Consumer_Loan' value= 'Consumer_Loan'> Consumer_Loan<br>
+  <input type="radio" name= 'Credit_Reporting' value= 'Credit_Reporting'> Credit_Reporting<br>
+  <input type="radio" name= 'Debt_Collection' value= 'Debt_Collection'> Debt_Collection<br>
+  <input type="radio" name= 'Money_Transfer' value= 'Money_Transfer'> Money_Transfer<br>
+  <input type="radio" name= 'Car_Loan' value= 'Car_Loan'> Car_Loan<br>
+  <input type="radio" name= 'Mortgage' value= 'Mortgage'> Mortgage<br>
+  <input type="radio" name= 'Student_Loan' value= 'Student_Loan'> Student_Loan<br>
+  <input type="radio" name= 'Other' value= 'Other'> Other<br>
+</form> 
 </div>
+
+
+
 
 <div>
     <form id='company_1' method='post'>
