product input as radio form

--- a/templates/input.html
+++ b/templates/input.html
@@ -10,20 +10,20 @@
 
 <div>
 <form id = 'product' method = 'post'>
-  <input type="radio" name= 'Bank_Account' value= 'Bank_Account' checked> Bank_Account<br>
-  <input type="radio" name= 'Consumer_Loan' value= 'Consumer_Loan'> Consumer_Loan<br>
-  <input type="radio" name= 'Credit_Reporting' value= 'Credit_Reporting'> Credit_Reporting<br>
-  <input type="radio" name= 'Debt_Collection' value= 'Debt_Collection'> Debt_Collection<br>
-  <input type="radio" name= 'Money_Transfer' value= 'Money_Transfer'> Money_Transfer<br>
-  <input type="radio" name= 'Car_Loan' value= 'Car_Loan'> Car_Loan<br>
-  <input type="radio" name= 'Mortgage' value= 'Mortgage'> Mortgage<br>
-  <input type="radio" name= 'Student_Loan' value= 'Student_Loan'> Student_Loan<br>
-  <input type="radio" name= 'Other' value= 'Other'> Other<br>
+  <input type="radio" name= 'product' value= 'Bank_Account' checked> Bank_Account<br>
+  <input type="radio" name= 'product' value= 'Consumer_Loan'> Consumer_Loan<br>
+  <input type="radio" name= 'product' value= 'Credit_Reporting'> Credit_Reporting<br>
+  <input type="radio" name= 'product' value= 'Debt_Collection'> Debt_Collection<br>
+  <input type="radio" name= 'product' value= 'Money_Transfer'> Money_Transfer<br>
+  <input type="radio" name= 'product' value= 'Car_Loan'> Car_Loan<br>
+  <input type="radio" name= 'product' value= 'Mortgage'> Mortgage<br>
+  <input type="radio" name= 'product' value= 'Student_Loan'> Student_Loan<br>
+  <input type="radio" name= 'product' value= 'Other'> Other<br>
 </form> 
 </div>
-
-
-
+<br>
+<br>
+<br>
 
 <div>
     <form id='company_1' method='post'>
