product input as radio form

--- a/templates/input.html
+++ b/templates/input.html
@@ -5,11 +5,9 @@
     <h3> Select a financial product and enter up to 3 financial service companies </h3>
 </div>
  
-
-
-
 <div>
-<form id = 'product' method = 'post'>
+<form id = 'full_form' method = 'post'>
+  Product:
   <input type="radio" name= 'product' value= 'Bank_Account' checked> Bank_Account<br>
   <input type="radio" name= 'product' value= 'Consumer_Loan'> Consumer_Loan<br>
   <input type="radio" name= 'product' value= 'Credit_Reporting'> Credit_Reporting<br>
@@ -19,34 +17,22 @@
   <input type="radio" name= 'product' value= 'Mortgage'> Mortgage<br>
   <input type="radio" name= 'product' value= 'Student_Loan'> Student_Loan<br>
   <input type="radio" name= 'product' value= 'Other'> Other<br>
-</form> 
-</div>
-<br>
-<br>
-<br>
-
-<div>
-    <form id='company_1' method='post'>
+  <br>
+  <br>
+  <br>
     Company name:
-    <br>
     <input type='text' name='company_1' placeholder='BANK OF AMERICA, NATIONAL ASSOCIATION'>
-</div>
-    
-<div>
-    <form id='company_2' method='post'>
-    Company name:
     <br>
+    <br>
+    Company name:
     <input type='text' name='company_2' placeholder='WELLS FARGO & COMPANY'>
-</div>
-    
-<div>
-    <form id='company_3' method='post'>
-    Company name:
     <br>
+    <br>
+    Company name:
     <input type='text' name='company_3' placeholder='NATIONSTAR MORTGAGE'>
-</div>
-
-<div>
-     <form id = 'enter_button' method = 'post'>
-     <input type='submit' value='Enter' />
+    <br>
+    <br>
+    <br>
+    <input type='submit' value='Enter' />
+</form> 
 </div>
