product input as radio form

--- a/templates/input.html
+++ b/templates/input.html
@@ -9,28 +9,27 @@
 <form id = 'full_form' method = 'post'>
   Product:
   <br>
-  <input type="radio" name= 'product' value= 'Bank_Account' checked> Bank_Account<br>
-  <input type="radio" name= 'product' value= 'Consumer_Loan'> Consumer_Loan<br>
-  <input type="radio" name= 'product' value= 'Credit_Reporting'> Credit_Reporting<br>
-  <input type="radio" name= 'product' value= 'Debt_Collection'> Debt_Collection<br>
-  <input type="radio" name= 'product' value= 'Money_Transfer'> Money_Transfer<br>
-  <input type="radio" name= 'product' value= 'Car_Loan'> Car_Loan<br>
-  <input type="radio" name= 'product' value= 'Mortgage'> Mortgage<br>
-  <input type="radio" name= 'product' value= 'Student_Loan'> Student_Loan<br>
-  <input type="radio" name= 'product' value= 'Other'> Other<br>
-  <br>
+  <input type="radio" name= 'product' value= 'Bank_Account' checked/> Bank_Account<br>
+  <input type="radio" name= 'product' value= 'Consumer_Loan'/> Consumer_Loan<br>
+  <input type="radio" name= 'product' value= 'Credit_Reporting'/> Credit_Reporting<br>
+  <input type="radio" name= 'product' value= 'Debt_Collection'/> Debt_Collection<br>
+  <input type="radio" name= 'product' value= 'Money_Transfer'/> Money_Transfer<br>
+  <input type="radio" name= 'product' value= 'Car_Loan'/> Car_Loan<br>
+  <input type="radio" name= 'product' value= 'Mortgage'/> Mortgage<br>
+  <input type="radio" name= 'product' value= 'Student_Loan'/> Student_Loan<br>
+  <input type="radio" name= 'product' value= 'Other'/> Other<br>
   <br>
   <br>
     Company name:
-    <input type='text' name='company_1' placeholder='BANK OF AMERICA, NATIONAL ASSOCIATION'>
+    <input type='text' name='company_1' placeholder='BANK OF AMERICA, NATIONAL ASSOCIATION'/>
     <br>
     <br>
     Company name:
-    <input type='text' name='company_2' placeholder='WELLS FARGO & COMPANY'>
+    <input type='text' name='company_2' placeholder='WELLS FARGO & COMPANY'/>
     <br>
     <br>
     Company name:
-    <input type='text' name='company_3' placeholder='NATIONSTAR MORTGAGE'>
+    <input type='text' name='company_3' placeholder='NATIONSTAR MORTGAGE'/>
     <br>
     <br>
     <br>
