--- a/templates/input.html
+++ b/templates/input.html
@@ -9,30 +9,30 @@
 <form id = 'full_form' method = 'post'>
   Product:
   <br>
-  <input type="radio" name= 'product' value= 'Bank_Account' checked </input> Bank_Account <br>
-  <input type="radio" name= 'product' value= 'Consumer_Loan'</input> Consumer_Loan<br>
-  <input type="radio" name= 'product' value= 'Credit_Reporting'</input> Credit_Reporting<br>
-  <input type="radio" name= 'product' value= 'Debt_Collection'</input> Debt_Collection<br>
-  <input type="radio" name= 'product' value= 'Money_Transfer'</input> Money_Transfer<br>
-  <input type="radio" name= 'product' value= 'Car_Loan'</input> Car_Loan<br>
-  <input type="radio" name= 'product' value= 'Mortgage'</input> Mortgage<br>
-  <input type="radio" name= 'product' value= 'Student_Loan'</input> Student_Loan<br>
-  <input type="radio" name= 'product' value= 'Other'</input> Other<br>
+  <input type="radio" name= 'product' value= 'Bank_Account' checked>  Bank_Account </input><br>
+  <input type="radio" name= 'product' value= 'Consumer_Loan'> Consumer_Loan </input> <br>
+  <input type="radio" name= 'product' value= 'Credit_Reporting'> Credit_Reporting </input> <br>
+  <input type="radio" name= 'product' value= 'Debt_Collection'> Debt_Collection </input> <br>
+  <input type="radio" name= 'product' value= 'Money_Transfer'> Money_Transfer> </input><br>
+  <input type="radio" name= 'product' value= 'Car_Loan'> Car_Loan </input><br>
+  <input type="radio" name= 'product' value= 'Mortgage'> Mortgage </input><br>
+  <input type="radio" name= 'product' value= 'Student_Loan'> Student_Loan </input><br>
+  <input type="radio" name= 'product' value= 'Other'> Other </input><br>
   <br>
   <br>
     Company name:
-    <input type='text' name='company_1' placeholder='BANK OF AMERICA, NATIONAL ASSOCIATION'</input>
+    <input type='text' name='company_1' placeholder='BANK OF AMERICA, NATIONAL ASSOCIATION'></input>
     <br>
     <br>
     Company name:
-    <input type='text' name='company_2' placeholder='WELLS FARGO & COMPANY'</input>
+    <input type='text' name='company_2' placeholder='WELLS FARGO & COMPANY'></input>
     <br>
     <br>
     Company name:
-    <input type='text' name='company_3' placeholder='NATIONSTAR MORTGAGE'</input>
+    <input type='text' name='company_3' placeholder='NATIONSTAR MORTGAGE'></input>
     <br>
     <br>
     <br>
-    <input type='submit' value='Enter' </input>
+    <input type='submit' value='Enter'></input>
 </form> 
 </div>
