product input as radio form

--- a/templates/input.html
+++ b/templates/input.html
@@ -9,30 +9,30 @@
 <form id = 'full_form' method = 'post'>
   Product:
   <br>
-  <input type="radio" name= 'product' value= 'Bank_Account' checked>  Bank_Account </input><br>
-  <input type="radio" name= 'product' value= 'Consumer_Loan'> Consumer_Loan </input> <br>
-  <input type="radio" name= 'product' value= 'Credit_Reporting'> Credit_Reporting </input> <br>
-  <input type="radio" name= 'product' value= 'Debt_Collection'> Debt_Collection </input> <br>
-  <input type="radio" name= 'product' value= 'Money_Transfer'> Money_Transfer> </input><br>
-  <input type="radio" name= 'product' value= 'Car_Loan'> Car_Loan </input><br>
-  <input type="radio" name= 'product' value= 'Mortgage'> Mortgage </input><br>
-  <input type="radio" name= 'product' value= 'Student_Loan'> Student_Loan </input><br>
-  <input type="radio" name= 'product' value= 'Other'> Other </input><br>
+  <input type="radio" name= "product" value="Bank_Account" value="Bank_Account"> Bank_Account </input><br>
+  <input type="radio" name= "product" value="Consumer_Loan"> Consumer_Loan </input><br>
+  <input type="radio" name= "product" value="Credit_Reporting"> Credit_Reporting </input><br>
+  <input type="radio" name= "product" value="Debt_Collection"> Debt_Collection </input> <br>
+  <input type="radio" name= "product" value="Money_Transfer"> Money_Transfer> </input><br>
+  <input type="radio" name= "product" value="Car_Loan"> Car_Loan </input><br>
+  <input type="radio" name= "product" value="Mortgage"> Mortgage </input><br>
+  <input type="radio" name= "product" value="Student_Loan"> Student_Loan </input><br>
+  <input type="radio" name= "product" value= "Other"> Other </input><br>
   <br>
   <br>
     Company name:
-    <input type='text' name='company_1' placeholder='BANK OF AMERICA, NATIONAL ASSOCIATION'></input>
+    <input type='text' name='company_1' placeholder='BANK OF AMERICA, NATIONAL ASSOCIATION'>
     <br>
     <br>
     Company name:
-    <input type='text' name='company_2' placeholder='WELLS FARGO & COMPANY'></input>
+    <input type='text' name='company_2' placeholder='WELLS FARGO & COMPANY'>
     <br>
     <br>
     Company name:
-    <input type='text' name='company_3' placeholder='NATIONSTAR MORTGAGE'></input>
+    <input type='text' name='company_3' placeholder='NATIONSTAR MORTGAGE'>
     <br>
     <br>
     <br>
-    <input type='submit' value='Enter'></input>
+    <input type='submit' value='Enter'>
 </form> 
 </div>
