cleaning output formatting

--- a/templates/output.html
+++ b/templates/output.html
@@ -1,7 +1,10 @@
  
 <html>
 
-    
+<head>
+<link type="text/css" rel="stylesheet" href="/static/style.css"/>
+</head>
+<body>
  <div class="row">
   <div class="column">
     {{ data1|safe }}
@@ -13,6 +16,7 @@
     {{ data3|safe }}
   </div>
 </div>
+ </body>
 
 <head>
  <link
@@ -24,7 +28,7 @@
 <link
     href="https://cdn.pydata.org/bokeh/release/bokeh-tables-0.12.4.min.css"
     rel="stylesheet" type="text/css">
-    </head>
+</head>
     
    
     
