--- a/templates/output.html
+++ b/templates/output.html
@@ -1,7 +1,10 @@
  
 <html>
 
-    
+<head>
+<link type="text/css" rel="stylesheet" href="/static/style.css"/>
+</head>
+<body>
  <div class="row">
   <div class="column">
     {{ data1|safe }}
@@ -13,7 +16,9 @@
     {{ data3|safe }}
   </div>
 </div>
+</body>
 
+<div>    
 <head>
  <link
     href="https://cdn.pydata.org/bokeh/release/bokeh-0.12.4.min.css"
@@ -25,22 +30,19 @@
     href="https://cdn.pydata.org/bokeh/release/bokeh-tables-0.12.4.min.css"
     rel="stylesheet" type="text/css">
 </head>
-    
-   
-    
-
   
-
+<body>
 {{ div|safe }}
 {{ script|safe }}
     
 <script src="https://cdn.pydata.org/bokeh/release/bokeh-0.12.4.min.js"></script>
 <script src="https://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.4.min.js"></script>
 <script src="https://cdn.pydata.org/bokeh/release/bokeh-tables-0.12.4.min.js"></script>
+</body>
+</div>
     
     
-    
-    
+<div>   
 <body>   
 {{ score1 }}   
 <br>
@@ -52,7 +54,7 @@
     
 </body>   
 
-  
+</div>
 
     
 
