cleaning output formatting

--- a/templates/output.html
+++ b/templates/output.html
@@ -8,13 +8,13 @@
 <body>
 <div class="container">
   <div class="row">
-    <div class="col-sm">
+    <div class="col-4">
       {{ data1|safe }}
     </div>
-    <div class="col-sm">
+    <div class="col-4">
       {{ data2|safe }}
     </div>
-    <div class="col-sm">
+    <div class="col-4">
       {{ data3 | safe }}
     </div>
   </div>
