--- a/templates/output.html
+++ b/templates/output.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="container">
-  <div class="row">
+  <div class="row-no-gutters">
     <div class="col-4">
       {{ data1|safe }}
     </div>
