--- a/templates/output.html
+++ b/templates/output.html
@@ -6,15 +6,15 @@
        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-<div class="container">
+<div class="container-fluid">
   <div class="row-no-gutters">
-    <div class="col-4">
+    <div class="col-xl-4">
       {{ data1|safe }}
     </div>
-    <div class="col-4">
+    <div class="col-xl-4">
       {{ data2|safe }}
     </div>
-    <div class="col-4">
+    <div class="col-xl-4">
       {{ data3 | safe }}
     </div>
   </div>
