--- a/templates/output.html
+++ b/templates/output.html
@@ -6,7 +6,7 @@
        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-  <div class="row-no-gutters">
+  <div class="row no-gutters">
     <div class="col-xl-4">
       {{ data1|safe }}
     </div>
