--- a/templates/input.html
+++ b/templates/input.html
@@ -29,7 +29,7 @@
     <br>
     <br>
     Company name:
-    <input type='text' name='company_3' placeholder='NATIONSTAR MORTGAGE'>
+    <input type='text' name='company_3' placeholder='JPMORGAN CHASE & CO.'>
     <br>
     <br>
     <br>
