--- a/templates/input.html
+++ b/templates/input.html
@@ -9,7 +9,7 @@
 <form id = 'full_form' method = 'post'>
   Product:
   <br>
-  <input type="radio" name= "product" value="Bank_Account" value="Bank_Account"> Bank_Account </input><br>
+  <input type="radio" name= "product" value="Bank_Account" value="Bank_Account" checked> Bank_Account </input><br>
   <input type="radio" name= "product" value="Consumer_Loan"> Consumer_Loan </input><br>
   <input type="radio" name= "product" value="Credit_Reporting"> Credit_Reporting </input><br>
   <input type="radio" name= "product" value="Debt_Collection"> Debt_Collection </input> <br>
