cleaning output formatting

--- a/templates/input.html
+++ b/templates/input.html
@@ -13,7 +13,7 @@
   <input type="radio" name= "product" value="Consumer_Loan"> Consumer_Loan </input><br>
   <input type="radio" name= "product" value="Credit_Reporting"> Credit_Reporting </input><br>
   <input type="radio" name= "product" value="Debt_Collection"> Debt_Collection </input> <br>
-  <input type="radio" name= "product" value="Money_Transfer"> Money_Transfer> </input><br>
+  <input type="radio" name= "product" value="Money_Transfer"> Money_Transfer </input><br>
   <input type="radio" name= "product" value="Car_Loan"> Car_Loan </input><br>
   <input type="radio" name= "product" value="Mortgage"> Mortgage </input><br>
   <input type="radio" name= "product" value="Student_Loan"> Student_Loan </input><br>
