added Credit_Card product

--- a/templates/about.html
+++ b/templates/about.html
@@ -23,12 +23,13 @@
  The CFPB Database logs problems or issues customers report experiencing with finanical companies, such as unexpected fees or poor 
  fraud protection, in relation to various financial products. There are some redundancies in the set of product categories in the database  
  (e.g., both 'Bank account or service', and 'Checking or savings account' are listed as separate categories; therefore, the app 
- combines categories and reduces the original 20 to the following 9 product categories:
+ combines categories and reduces the original 18 to the following 10 product categories:
  </p>
 
 <ul>
   <li>Bank_Account</li>
   <li>Consumer_Loan</li>
+  <li>Credit_Card</li>
   <li>Credit_Reporting</li>
   <li>Debt_Collection</li>
   <li>Money_Transfer</li>
