--- a/templates/input.html
+++ b/templates/input.html
@@ -11,6 +11,7 @@
   <br>
   <input type="radio" name= "product" value="Bank_Account" value="Bank_Account" checked> Bank_Account </input><br>
   <input type="radio" name= "product" value="Consumer_Loan"> Consumer_Loan </input><br>
+  <input type="radio" name= "product" value="Credit_Card"> Credit_Card </input><br>
   <input type="radio" name= "product" value="Credit_Reporting"> Credit_Reporting </input><br>
   <input type="radio" name= "product" value="Debt_Collection"> Debt_Collection </input> <br>
   <input type="radio" name= "product" value="Money_Transfer"> Money_Transfer </input><br>
